# archon

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  archon-rebuild.sh
changelog/: README.md  v0.1.0.md
crates/archon-cli/: Cargo.toml
crates/archon-cli/src/: main.rs  permission.rs
crates/archon-core/: Cargo.toml
crates/archon-core/src/: agent_loop.rs  context.rs  lib.rs  permission.rs  session.rs  tool.rs  types.rs
crates/archon-llm/: Cargo.toml
crates/archon-llm/src/: anthropic.rs  lib.rs  openai.rs  provider.rs  retry.rs  streaming.rs
crates/archon-tools/: Cargo.toml
crates/archon-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  read.rs  sandbox.rs  web_fetch.rs  web_search.rs  write.rs
crates/archon-tools/tests/: sandbox_test.rs
plan/: README.md  milestone-v0.1.0.md  milestone-v0.2.0.md  phase-1-production-ready.md
