[package]
name = "archon-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
futures = { workspace = true }
glob = "0.3"
regex = "1"
urlencoding = "2"
archon-core = { path = "../archon-core" }

[dev-dependencies]
tempfile = "3"
